# src/rest_api/docs/swagger.json
@@ -8,7 +8,7 @@
     },
     "paths": {
         "/api/v1/login": {
-            "get": {
+            "post": {
                 "description": "Get jwt token",
                 "consumes": [
                     "application/json"
@@ -20,6 +20,17 @@
                     "auth"
                 ],
                 "summary": "Get jwt token",
+                "parameters": [
+                    {
+                        "description": "Login Input",
+                        "name": "auth",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.LoginInput"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -50,6 +61,17 @@
         }
     },
     "definitions": {
+        "model.LoginInput": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "model.ResponseHTTP": {
             "type": "object",
             "properties": {
